[gd_scene load_steps=27 format=3 uid="uid://cq7lqptnqemxp"]

[ext_resource type="Script" uid="uid://dnm4eml6s5h78" path="res://lib/PauseMenu/pause_menu.gd" id="1_eslww"]
[ext_resource type="PackedScene" uid="uid://b37diy1gejp4e" path="res://lib/Credits/credits_container.tscn" id="2_dqwxq"]
[ext_resource type="Texture2D" uid="uid://qmwe1ss0eryi" path="res://imports/icons/menu-line_240px.png" id="2_eslww"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_dqjkp"]
[ext_resource type="PackedScene" uid="uid://dckxqiei76mb2" path="res://lib/PauseMenu/QuitGameMenu.tscn" id="3_qqgi3"]
[ext_resource type="Script" uid="uid://cofosv5dg2lxa" path="res://lib/PauseMenu/touch_controls_menu.gd" id="3_uwrx0"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_qdviu"]
[ext_resource type="FontFile" uid="uid://puw8wtbfcgof" path="res://imports/fonts/Noto_Emoji/NotoEmoji-VariableFont_wght.ttf" id="4_woidn"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_n0kmj"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_2ngo1"]
[ext_resource type="Texture2D" uid="uid://bqltjr4rulvwc" path="res://imports/icons/arrow-left-s-line_240px.png" id="6_834gu"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_d5fkd"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_w32fv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h556"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.09985284, 0.09985284, 0.09985284, 0.97)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 5

[sub_resource type="Resource" id="Resource_mcyat"]
resource_local_to_scene = true
script = ExtResource("3_dqjkp")

[sub_resource type="Resource" id="Resource_btcha"]
resource_local_to_scene = true
script = ExtResource("4_qdviu")

[sub_resource type="Resource" id="Resource_kncwo"]
resource_local_to_scene = true
script = ExtResource("5_n0kmj")

[sub_resource type="Resource" id="Resource_lfhsg"]
resource_local_to_scene = true
script = ExtResource("6_2ngo1")

[sub_resource type="Resource" id="Resource_tgru6"]
resource_local_to_scene = true
script = ExtResource("7_d5fkd")

[sub_resource type="Resource" id="Resource_47qy8"]
resource_local_to_scene = true
script = ExtResource("8_w32fv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_uwrx0"]
texture = ExtResource("2_eslww")
texture_margin_top = 20.0
texture_margin_right = 40.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqwxq"]
texture = ExtResource("6_834gu")
texture_margin_top = 20.0
texture_margin_right = 40.0
texture_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gw048"]
texture = ExtResource("2_eslww")
texture_margin_top = 20.0
texture_margin_right = 40.0
texture_margin_bottom = 20.0
modulate_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_av4h2"]
texture = ExtResource("6_834gu")
texture_margin_top = 20.0
texture_margin_right = 40.0
texture_margin_bottom = 20.0
modulate_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="InputEventAction" id="InputEventAction_m3ooj"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_u2pij"]
events = [SubResource("InputEventAction_m3ooj")]

[node name="PauseMenu" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(480, 866)
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 866.0
script = ExtResource("1_eslww")
category_icon = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 70
theme_override_constants/margin_bottom = 0

[node name="PauseMenuPanel" type="Panel" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5h556")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PauseMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Credits Container" parent="MarginContainer/PauseMenuPanel/MarginContainer" instance=ExtResource("2_dqwxq")]
unique_name_in_owner = true
layout_mode = 2

[node name="Credits" parent="MarginContainer/PauseMenuPanel/MarginContainer/Credits Container" index="0"]
text = "[font_size=36]Contractor Hero[/font_size]

An endless runner by Fabricio Zuardi.

    [i]\"Death Stranding meets Subway Surfer.\"[/i]

[font_size=27]License[/font_size]

MIT License
Copyright Fabricio Campos Zuardi - 2025

[font_size=27]Intro / About the Creator[/font_size]

I am a software developer/amateur art director interested in sharing my work with others online, and trying to make indie games for a living, if you enjoyed this demo, or just want to get in contact please leave a feedback at Itch.io by following the link below:

[url=https://fczuardi.itch.io/contractor-hero/rate]https://fczuardi.itch.io/contractor-hero/rate[/url]

Every review means a lot to me. Leave a comment :)

[font_size=22]\"Solo\" Open Source Game Dev[/font_size]

I don't consider myself a \"solo-dev\" because I am standing in the shoulders of giants, this work is only possible due to ethical people that share their knowledge, the Free Software movement and Free Culture as a whole.

There are [b]at least 61[/b] other [b]amazing humans[/b] that contributed with their time and their art to this game and I am incredibly thankful to every one of the people below:


[font_size=27]Credits & Acknoledgements[/font_size]

[font_size=22]Assets and Licences (23+ authors)[/font_size]

[font_size=18]Character, Animations[/font_size]

    - [url=https://www.mixamo.com/#/?page=1&query=pete&type=Character]\"Pete\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=male+swagger]\"Walking With A Swagger\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=texting+walking+male]\"Male Walking While Texting On A Smartphone\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=weighted]\"Male Weighted Run\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=point+thumb]\"Pointing Behind With Thumb\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=point+forward+look]\"Looking Down Then Pointing Forward\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=brief+stumble+jog]\"Brief Stumble While Jogging\"[/url]
    - [url=https://www.mixamo.com/#/?page=1&query=walk+tripping+falling]\"Walk To Tripping And Falling\"[/url]
    - [hint=https://www.mixamo.com/#/?page=1&query=mid+air+falling+idle][url=]\"Mid-Air Falling Idle\"[/url][/hint]
        - Author: [url=https://www.mixamo.com]Adobe Mixamo[/url]
        - License: [url=https://www.adobe.com/legal/terms.html#content-files]Adobe Terms of Service[/url]

[font_size=18]Clothing [/font_size]

    - [url=https://sketchfab.com/3d-models/winter-hat-637a36cb74204c719883af7feb4b7c28]Winter Hat[/url]
        - Author: [url=https://sketchfab.com/stubbornfunkydonkey]StubbornFunkyDonkey[/url]
        - License: [url=https://creativecommons.org/licenses/by/4.0/]Creative Commons Attribution 4.0 International[/url]
    - Sneakers from [url=https://sketchfab.com/3d-models/zapatilla-asics-gel-nimbus-23-low-poly-1d4a1f38b12543b595566e3f410afab4]Zapatilla Asics Gel-Nimbus 23 (Low Poly)[/url]
        - Author: [url=https://sketchfab.com/tfernndez]Tomás Fernández Castillo[/url]
        - License: [url=https://creativecommons.org/licenses/by/4.0/]Creative Commons Attribution 4.0 International[/url] 

[font_size=18]Collectibles[/font_size]

    - Level, Pencil from [url=https://sketchfab.com/3d-models/construction-tools-09e12ba3f7ee42259b6533581abec86f]Construction Tools[/url]
        - Author: [url=https://sketchfab.com/Teen-Wolf]Teen Wolf[/url]
        - License: [url=https://creativecommons.org/licenses/by/4.0/]Creative Commons Attribution 4.0 International[/url]
    - Measuring Tape from [url=https://sketchfab.com/3d-models/construction-tools-2-pack-9facdce61fff42578f50c16393be306b]Construction Tools 2 Pack[/url]
        - Author: [url=https://sketchfab.com/Teen-Wolf]Teen Wolf[/url]
        - License: [url=https://creativecommons.org/licenses/by/4.0/]Creative Commons Attribution 4.0 International[/url]
    - Pickets, Mallet, Spray Paint from [url=https://sketchfab.com/3d-models/heinrich-staking-earthworks-trimble-s9-c5b164a003ff4beca6820214e0c3a0c1]Heinrich-staking Earthworks-Trimble-S9[/url]
        - Author: [url=https://patrickbiani.wixsite.com/6tmd-modeling]6TMD-Modeling[/url]
        - License: [url=https://creativecommons.org/licenses/by/4.0/]Creative Commons Attribution 4.0 International[/url]
    - Toilet Paper Roll from [url=https://sketchfab.com/3d-models/cc0-toilet-paper-roll-6d5284b842434413a17133f7bf259669]CC0 - Toilet Paper Roll[/url]
        - Authot: [url=https://plaggy.net/]Marcel Plagmann (aka plaggy)[/url]
        - Licenses: 
            - [url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0 Universal (CC0 1.0) Public Domain Dedication[/url]
            - [url=http://creativecommons.org/licenses/by/4.0/]CC-BY-4.0[/url]
    - Bitcoin Coin from [url=https://sketchfab.com/3d-models/realistic-3d-bitcoin-model-crypto-asset-d71eff74bd5c4e25890477a4d3ecea73]Realistic 3D Bitcoin Model – Crypto Asset[/url]
        - Author: [url=https://sketchfab.com/CryptoArt-Miki]CryptoArt-Miki[/url]
        - License: [url=https://creativecommons.org/licenses/by-nc/4.0/]Creative Commons Attribution-NonCommercial 4.0[/url]
    - Spade from [url=https://aligned-games.itch.io/realistic-modern-construction-site-asset-package]Realistic Modern Construction Site Asset Package[/url]
        - Author: [url=https://aligned-games.itch.io/]Aligned Games[/url]
        - License: Unknown, paid asset pack

[font_size=18]Scenery / Obstacles[/font_size]

    - Clipboard, Toilets, Pallet from [url=https://lowpolyassets.itch.io/low-poly-construction-pack]Low Poly Construction Pack[/url]
        - Author: [url=https://lowpolyassets.itch.io/]LowPolyAssets[/url]
        - License: [url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0 Universal[/url]

[font_size=18]Textures[/font_size]

    - Ground Plan from [url=https://en.wikipedia.org/wiki/File:Architectural_plan_of_the_Public_Offices_and_Court_House,_Maryborough,_circa_1888.jpg]Architectural plan of the Public Offices and Court House, Maryborough, circa 1888[/url]
        - Author: [url=https://en.wikipedia.org/wiki/Francis_Drummond_Greville_Stanley]Francis Drummond Greville Stanley[/url]
        - Published by: [url=https://www.qld.gov.au/recreation/arts/heritage/archives]State Archives of Queensland[/url]
        - License: Public Domain
    - Dirt from [url=https://codezly.itch.io/codezly-basic-pack-1]Codezly's Basic Texture Pack (#1)[/url]
        - Author: [url=https://www.codezly.com]Codezly[/url]
        - License: Codezly Free Texture Pack License Agreement
            - \"Use them in any project you want, but don't repackage/resell them, and just provide a link to www.codezly.com as attribution.\"
        - PBR Maps Generated with: [url=https://github.com/aniketrajnish/Unity-WebGPU-PBR-Maps-Generator]Unity-WebGPU-PBR-Maps-Generator[/url]
            - License: [url=https://github.com/aniketrajnish/Unity-WebGPU-PBR-Maps-Generator/blob/main/LICENSE]MIT License[/url]

[font_size=18]Fonts[/font_size]

    - [url=https://fonts.google.com/specimen/Big+Shoulders+Stencil]Big Shoulders Stencil[/url]
        - Author: [url=https://github.com/xotypeco/big_shoulders]Big Shoulders Project Authors[/url]
        - License: [url=https://fonts.google.com/specimen/Big+Shoulders+Stencil/license]SIL Open Font License Version 1.1[/url] 
    - [url=https://fonts.google.com/noto/specimen/Noto+Emoji]Noto Emoji[/url]
        - Author: Google LLC
        - License: [url=https://fonts.google.com/noto/specimen/Noto+Emoji/license]Open Font License 1.1[/url]

[font_size=18]Icons[/font_size]

    - [url=https://remixicon.com/]Remix Icon[/url]
        - Authors: [url=https://github.com/Remix-Design]Remix Design Studio (Wendy Gao and Jimmy Cheung)[/url]
        - License: [url=https://github.com/Remix-Design/remixicon/blob/master/License]Apache License 2.0[/url]
        - Items:
            - treasure-map-line
            - ri-run-line
            - ri-menu-line
            - circle-fill
            - navigation-fill
    - Noun Project:
        - [url=https://thenounproject.com/icon/level-6853002/]Level by INA[/url]
            - Author: [url=https://thenounproject.com/creator/zullyantisiti78/]INA[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/pencil-8001529/]Pencil by LUTFI GANI AL ACHMAD[/url]
            - Author: [url=https://thenounproject.com/creator/lutfidiarycoc/]LUTFI GANI AL ACHMAD[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/measuring-tape-7819005/]measuring tape by Firza Alamsyah[/url]
            - Author: [url=https://thenounproject.com/creator/crlxsens/]Firza Alamsyah[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/mallet-4296337/]Mallet by M. Oki Orlando[/url]
            - Author: [url=https://thenounproject.com/creator/orvipixel/]M. Oki Orlando[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/tent-stake-6308587/]Tent Stake by Kawalan Icon[/url]
            - Author: [url=https://thenounproject.com/creator/kawalan.studio]Kawalan Icon[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/lock-7854371/]Lock by Sita Raisita[/url]
            - Author: [url=https://thenounproject.com/creator/raisita/]Sita Raisita[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/tissue-paper-6932814/]Tissue Paper by Zach Hainsworth[/url]
            - Author: [url=https://thenounproject.com/creator/hainsworth.zach]Zach Hainsworth[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/toilet-151638/]Toilet by Wilson Joseph[/url]
            - Author: [url=https://www.tuktukdesign.com/]Wilson Joseph[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/shovel-7837473/]Shovel by Marco Livolsi[/url]
            - Author: [url=https://thenounproject.com/creator/marco.livolsi2014]Marco Livolsi[/url]
                - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]
        - [url=https://thenounproject.com/icon/running-shoes-7597877/]running shoes by Ayub Irawan[/url]
            - Author: [url=https://thenounproject.com/creator/ayub12/]Ayub Irawan[/url]
            - License: [url=http://creativecommons.org/licenses/by/3.0/]CC BY 3.0[/url]

[font_size=22]Friends / Playtest (32+ supporters)[/font_size]

[ul]Juliana
([url=https://itch.io/c/6345901/cafepivara]Cafepivara[/url]) Lucas, Marcelo
([url=https://weplex.com.br/]Weplex[/url]) Taboca
([url=https://iamfounder.com.br/]IAM Founder[/url]) Thiago, Rafael, Isa, Nelsinho
(Sexta Light) Maristela, Marcelo Prataviera, Andréia
([url=https://www.linkedin.com/company/palmalabs/]Palma Labs[/url]) Emilio
([url=https://linktr.ee/fullbragger]fullbragger[/url]) Braga
(Slowlearners) Mauricio, Renan, Adriano
([url=https://vinteum.org/]Casa21[/url]) UlisFlavio, Joaozinho, Leal, Lucas, Edil, Hiro
Bruno Fabbri, Rafael Teizen
Tatuí, Zóide
Kenzo, Maria Carolina, João Lucas, Ivan, Antônio, Márcia
([url=https://artemultimodal.wordpress.com/contato/]Arte Multimodal[/url]) Fernando Falci
Onovolab
[/ul]

[font_size=22]Free Software / Freedom Tech[/font_size]

[ul][url=https://godotengine.org/]Godot[/url] (MIT)
[ul]Addons: 
[ul][url=https://github.com/daenvil/MarkdownLabel]MarkdownLabel[/url] (MIT)
[/ul][/ul]
[url=https://www.blender.org/]Blender[/url] (GPL 2 or later)
[url=https://www.gimp.org/]Gimp[/url] (GPL 3)
[url=https://jj-vcs.github.io/jj/latest/]Jujutsu VCS[/url] (Apache 2.0)
[url=https://neovim.io/]Neovim[/url] (Apache 2.0)
[url=https://bitcoincore.org/]Bitcoin[/url] (MIT)
[url=https://projectbluefin.io/]Bluefin Linux[/url] (Apache 2.0)
[/ul]

[font_size=22]Free Culture[/font_size]

[ul][url=https://creativecommons.org/]Creative Commons[/url]
[url=https://en.wikipedia.org/wiki/Main_Page]Wikipedia[/url]
[/ul]

[font_size=22]Others[/font_size]

[ul][url=https://chatgpt.com/]OpenAI[/url]
[url=https://itch.io/]Itch[/url]
[url=https://github.com/]Github[/url]
[url=https://www.tldraw.com/]tldraw[/url]
[url=https://sketchfab.com/]sketchfab[/url]
[url=https://thenounproject.com/]The Noun Project[/url]
[/ul]

[font_size=22]Youtube (6+ content creators)[/font_size]

[ul][url=https://www.youtube.com/@euzebioconstrutor2815]Euzebio Construtor[/url]
[url=https://www.youtube.com/c/JRConstru%C3%A7%C3%A3o]JR CONSTRUÇÃO[/url]
[url=https://www.youtube.com/@essentialcraftsman]Essential Craftsman[/url]
[url=https://www.youtube.com/@PerkinsBuilderBrothers]Perkins Builder Brothers[/url]
[url=https://www.youtube.com/@build-better-things]Build Better Things[/url]
[url=https://www.youtube.com/@HowToBuildYourOwnHome]How to Build Your Own Home[/url]
[/ul]

[font_size=27]Open to work[/font_size]

I am also open to freelance work. I am, in fact, a contractor myself (although a knowledge worker, not a GC in the construction field).

I am more interested in gamedev at the moment, but throughout my career I have worked on different jobs in the computer industry, from advertisement agencies, to VC funded sillicon valley startups, to Open Source projects/communities, to Cloud providers, and I am open to many of the traditional roles in the computer industry.

I am a senior developer with experience in community-focused roles like dev-rel and technical writing, leading roles such as product management and squad leading, and of course, programmer / technical execution roles as well, like front-end development, QA etc.

I do special rates for Open Source projects, since they are my preference. If you need an energetic creative person that is able to cut scope and deliver well-documented no-bullshit products, or foster developer communities I might be the person for your team, lets talk on [url=https://www.linkedin.com/in/fabricio/]LinkedIn[/url].

"
h1 = SubResource("Resource_mcyat")
h2 = SubResource("Resource_btcha")
h3 = SubResource("Resource_kncwo")
h4 = SubResource("Resource_lfhsg")
h5 = SubResource("Resource_tgru6")
h6 = SubResource("Resource_47qy8")

[node name="MenuSections" type="VBoxContainer" parent="MarginContainer/PauseMenuPanel/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="SliceTitleLabel" type="Label" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="TouchControlMenuSection" type="VBoxContainer" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
layout_mode = 2
script = ExtResource("3_uwrx0")

[node name="margin-top" type="Control" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection/HBoxContainer"]
layout_mode = 2
text = "Touch Controls"

[node name="CheckButton" type="CheckButton" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection/HBoxContainer"]
visible = false
layout_mode = 2
button_pressed = true

[node name="ThumbClusterOptionsContainer" type="HBoxContainer" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="LayoutLeftBtn" type="Button" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection/ThumbClusterOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Left Thumb"

[node name="LayoutBothBtn" type="Button" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection/ThumbClusterOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
toggle_mode = true
button_pressed = true
text = "Both Hands"

[node name="LayoutRightBtn" type="Button" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections/TouchControlMenuSection/ThumbClusterOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Right Thumb"

[node name="About Section Title" type="Label" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
layout_mode = 2
text = "About"

[node name="Credits Btn" type="Button" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="separator2" type="Control" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Quit Session Title" type="Label" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="QuitGameMenuSection" parent="MarginContainer/PauseMenuPanel/MarginContainer/MenuSections" instance=ExtResource("3_qqgi3")]
unique_name_in_owner = true
layout_mode = 2

[node name="PauseMenuBgIcon" type="Label" parent="MarginContainer/PauseMenuPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 156.0
offset_bottom = 172.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.1)
theme_override_fonts/font = ExtResource("4_woidn")
theme_override_font_sizes/font_size = 107

[node name="PauseBtnContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PauseMenuButton" type="Button" parent="PauseBtnContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_uwrx0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_dqwxq")
theme_override_styles/hover = SubResource("StyleBoxTexture_gw048")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_av4h2")
toggle_mode = true
action_mode = 0
shortcut = SubResource("Shortcut_u2pij")
icon_alignment = 1
expand_icon = true

[editable path="MarginContainer/PauseMenuPanel/MarginContainer/Credits Container"]
